--- a/20 days strategy/day2.ipynb
+++ b/20 days strategy/day2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This is day 2 of learning "
+    "#This is day 2 of learning. I am actually enjoying learning python"
    ]
   }
  ],
