--- a/20 days strategy/day1.ipynb
+++ b/20 days strategy/day1.ipynb
@@ -194,8 +194,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chellenges\n",
-    "- ### Chellenge no 1\n",
+    "## Challenges\n",
+    "- ### Challenge no 1\n",
     "     Python program to take a sentence as input and display the number of vowels in it"
    ]
   },
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Chellenge no 2\n",
+    "- ### Challenge no 2\n",
     "Python program to display first 50 prime numbers"
    ]
   },
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Chellenge no 3\n",
+    "- ### Challenge no 3\n",
     "     Python program which takes a list of numbers as input and return the sum of all even numbers in it"
    ]
   },
@@ -340,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Chelllenge no 4\n",
+    "- ### Challlenge no 4\n",
     "     python program which takes list as input and returns a list having all those words containing 'a'"
    ]
   },
@@ -377,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Chellenge no 5\n",
+    "- ### Chllenge no 5\n",
     "     Python program that takes a list of numbers as input and returns a new list all prime numbers only for the input list"
    ]
   },
