--- a/20 days strategy/day2.ipynb
+++ b/20 days strategy/day2.ipynb
@@ -1,12 +1,56 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 2\n",
+    "- ## Practice of for/while loops and if-else and switch statements\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the below for loops, 'i' has been iterated in the string 'Python'. We know that the unit of something is the building block of that thing. For example the building block of human body is cell which is the unit of human body. Same here the building block of string is character. So the value assigned to i will be the first unit of string i.e. first character of string which for now is 'Python'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P,y,t,h,o,n,"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in 'Python': # i will be assigned as the unit of the thing in which it has been iterated.\n",
+    "    print(i , end = ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This is day 2 of learning. I am actually enjoying learning python"
+    "n = int(input('Enter number to find its factorial'))\n",
+    "for i in range(1, n)\n"
    ]
   }
  ],
@@ -17,8 +61,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0rc2"
   },
   "orig_nbformat": 4
  },
