--- a/20 days strategy/day2.ipynb
+++ b/20 days strategy/day2.ipynb
@@ -38,20 +38,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A B C D E F G H I J K L M N O P Q R S T U V W X Y Z a b c d e f g h i j k l m n o p q r s t u v w x y z "
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(65 , 91): #chr() is used to input the most of the intro is the \n",
+    "    print(chr(i),end=' ')\n",
+    "for i in range(97 , 123): #chr() is used to input the most of the intro is the \n",
+    "    print(chr(i),end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2, 5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Factorial\n",
+    " Program to find the factorial of any number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 5 is 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter number to find its factorial'))\n",
+    "fact = 1\n",
+    "for i in range(1, n+1):\n",
+    "    fact *=i\n",
+    "print(f'The factorial of {n} is {fact}' )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Challenges\n",
+    "- ### Challenge no 1\n",
+    "     Python program which takes numbers list as input and returns the largest number from it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest number is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "my_list = [2,3, 4, 5, 6, 3, 7, 9, 1, 4, 10]\n",
+    "my_numberslist = []\n",
+    "for i in range(len(my_list)):\n",
+    "    my_numberslist.append(int(my_list[i]))\n",
+    "largest = my_numberslist[0]\n",
+    "for i in my_numberslist:\n",
+    "    if i > largest:\n",
+    "        largest = i\n",
+    "print('The largest number is',largest)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Challenge no 2\n",
+    "     python program which takes a list of words as input and returns the total number of words in it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no of words are 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This program only works when there are no punctuations in the whole sentence\n",
+    "listWords= 'My name is muaaz I am learning python I have a 20 days strategy to learn it'\n",
+    "words = 0\n",
+    "for i in range(len(listWords)):\n",
+    "    if ord(listWords[i]) == 32:\n",
+    "        if 64<ord(listWords[i-1])<92 or 96< ord(listWords[i-1])<124 or 47< ord(listWords[i-1]) <59:\n",
+    "            words +=1\n",
+    "print('no of words are',words)\n",
+    "#ord(listWords[i-1])\n",
+    "\n",
+    "\n",
+    "# for i in listWords:\n",
+    "#     if 64<ord(i)<91 or 64> 97< ord(i)<123 or 47< ord(i) <59 or ord(i) == 32:\n",
+    "        "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Chellenge no 2 alternatives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no of words are 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alternative no 1\n",
+    "listWords= 'My name is muaaz. I am learning python. I have a 20 days strategy to learn it'\n",
+    "wordDetected = 0\n",
+    "words = 0\n",
+    "for i in range(len(listWords)):\n",
+    "    if 64<ord(listWords[i-1])<92 or 96< ord(listWords[i-1])<124 or 47< ord(listWords[i-1]) <59:\n",
+    "        wordDetected = 0\n",
+    "        continue\n",
+    "    wordDetected +=1\n",
+    "    if wordDetected == 1 and i != len(listWords)-1:\n",
+    "        words+=1\n",
+    "        \n",
+    "print('no of words are',words)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of words in the paragraph is: 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alternative no 2\n",
+    "paragraph = 'My name is muaaz. . . I am learning python. I have a 20 days strategy to learn it.'\n",
+    "words = paragraph.split()\n",
+    "num_words = len(words)\n",
+    "print(\"The number of words in the paragraph is:\", num_words)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Chellenge no 3\n",
+    "     python program wich takes the list of numbers as input and return the product of all list numbers"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "n = int(input('Enter number to find its factorial'))\n",
-    "for i in range(1, n)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
