--- a/20 days strategy/day2.ipynb
+++ b/20 days strategy/day2.ipynb
@@ -254,7 +254,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_list = [2,3, 4, 5, 6, 3, 7, 9, 1, 4, 10]\n",
+    "my_numberslist = []\n",
+    "for i in range(len(my_list)):\n",
+    "    my_numberslist.append(int(my_list[i]))"
+   ]
   }
  ],
  "metadata": {
@@ -273,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc2"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
