--- a/20 days strategy/day2.ipynb
+++ b/20 days strategy/day2.ipynb
@@ -251,14 +251,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the total product is 5443200\n"
+     ]
+    }
+   ],
    "source": [
     "my_list = [2,3, 4, 5, 6, 3, 7, 9, 1, 4, 10]\n",
+    "product=1\n",
     "my_numberslist = []\n",
     "for i in range(len(my_list)):\n",
-    "    my_numberslist.append(int(my_list[i]))"
+    "    my_numberslist.append(int(my_list[i]))\n",
+    "for i in my_numberslist:\n",
+    "    product *= i\n",
+    "print(f'the total product is {product}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Chellenge no 4\n",
+    "     python program which takes a list of words as input and returns only numbers starting with 'A'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bag Caat Duck "
+     ]
+    }
+   ],
+   "source": [
+    "wordsList = ['Bag', 'Caat', 'ball', 'Duck', 'shirt', 'jeans']\n",
+    "for i in range(len(wordsList)):\n",
+    "    if 64<ord(wordsList[i][0])<93:\n",
+    "       print(wordsList[i], end=' ')\n",
+    "        "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Chellenge no 5\n",
+    "     python program which takes a list of numbers as input and returns the odds from that list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 5, 3, 7, 9, 1]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = [2,3, 4, 5, 6, 3, 7, 9, 1, 4, 10]\n",
+    "product=1\n",
+    "oddList = []\n",
+    "my_numberslist = []\n",
+    "for i in range(len(my_list)):\n",
+    "    my_numberslist.append(int(my_list[i]))\n",
+    "for i in my_numberslist:\n",
+    "    if i % 2 != 0:\n",
+    "        oddList.append(i)\n",
+    "oddList"
    ]
   }
  ],
@@ -278,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc2"
   },
   "orig_nbformat": 4
  },
