--- a/20 days strategy/day1.ipynb
+++ b/20 days strategy/day1.ipynb
@@ -93,39 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144]\n",
-      "[4, 9, 16, 49, 64, 81, 100, 121, 144]\n",
-      "[1, 4, 9, 16]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list1 = [1, 4, 9, 16, 25, 36]\n",
     "print(list1 + [49, 64, 81, 100, 121, 144]) #concatenation\n",
     "list2 = list1[-5:-2] + [49, 64, 81, 100, 121, 144]\n",
     "print(list2) #slicing + concetenation\n",
     "print(list1[0:4])\n",
-    "list1[0:4] = ['a', 'b' , 'c' , 'd' 'e', 'f']\n",
+    "list1[0:4] = [6 , 9 , 9 , 6]\n",
     "len(list1)\n",
     "list3 = [list1, list2]\n",
-    "list3[1][6]\n"
+    "list3[1][6]"
    ]
   },
   {
@@ -469,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc2"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
