--- a/20 days strategy/day2.ipynb
+++ b/20 days strategy/day2.ipynb
@@ -5,8 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 2\n",
-    "- ## Practice of for/while loops and if-else and switch statements\n"
+    "# **Day 2**\n",
+    "- ## for/while loops and if-else statements\n",
+    "     - ### Practice"
    ]
   },
   {
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -81,8 +82,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Factorial\n",
-    " Program to find the factorial of any number"
+    "- #### *Factorial*\n",
+    "     Program to find the factorial of any number"
    ]
   },
   {
@@ -111,9 +112,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Challenges\n",
-    "- ### Challenge no 1\n",
-    "     Python program which takes numbers list as input and returns the largest number from it"
+    "- #### **Challenges**\n",
+    "     - ##### *Challenge no 1*\n",
+    "          Python program which takes numbers list as input and returns the largest number from it"
    ]
   },
   {
@@ -147,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Challenge no 2\n",
+    "- ##### *Challenge no 2*\n",
     "     python program which takes a list of words as input and returns the total number of words in it"
    ]
   },
@@ -186,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Chellenge no 2 alternatives"
+    "- #### *Chellenge no 2 alternatives*"
    ]
   },
   {
@@ -245,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Chellenge no 3\n",
+    "- ##### *Chellenge no 3*\n",
     "     python program wich takes the list of numbers as input and return the product of all list numbers"
    ]
   },
@@ -278,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Chellenge no 4\n",
+    "- #### *Chellenge no 4*\n",
     "     python program which takes a list of words as input and returns only numbers starting with 'A'"
    ]
   },
@@ -308,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Chellenge no 5\n",
+    "- #### *Chellenge no 5*\n",
     "     python program which takes a list of numbers as input and returns the odds from that list"
    ]
   },
