--- a/20 days strategy/day1.ipynb
+++ b/20 days strategy/day1.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Practice"
+    "# **Day 1**\n",
+    "- ## Datatypes and working with strings\n",
+    "     - ### Practice"
    ]
   },
   {
@@ -194,8 +196,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Challenges\n",
-    "- ### Challenge no 1\n",
+    "### **Challenges**\n",
+    "- #### *Challenge no 1*\n",
     "     Python program to take a sentence as input and display the number of vowels in it"
    ]
   },
@@ -226,8 +228,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Challenge no 2\n",
-    "Python program to display first 50 prime numbers"
+    "- #### *Challenge no 2*\n",
+    "     Python program to display first 50 prime numbers"
    ]
   },
   {
@@ -259,8 +261,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Alternative to the above chellenge\n",
-    " this is the most efficient method"
+    "- #### *Alternative to the above chellenge*\n",
+    "     This is more effective then the above while in terms of efficiency"
    ]
   },
   {
@@ -295,8 +297,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Alternative no 2 to the above chellenge by Sieve of Eratosthenes algorithm\n",
-    " chatGPT says that is the most efficient algorithmto find the prime number below n"
+    "- #### *Alternative no 2 to the above chellenge by Sieve of Eratosthenes algorithm*\n",
+    "     chatGPT says that is the most efficient algorithmto find the prime number below n"
    ]
   },
   {
@@ -331,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Challenge no 3\n",
+    "- #### *Challenge no 3*\n",
     "     Python program which takes a list of numbers as input and return the sum of all even numbers in it"
    ]
   },
@@ -380,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Challlenge no 4\n",
+    "- #### *Challlenge no 4*\n",
     "     python program which takes list as input and returns a list having all those words containing 'a'"
    ]
   },
@@ -417,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Chllenge no 5\n",
+    "- #### *Chllenge no 5*\n",
     "     Python program that takes a list of numbers as input and returns a new list all prime numbers only for the input list"
    ]
   },
@@ -469,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc2"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
