--- a/20 days strategy/day3.ipynb
+++ b/20 days strategy/day3.ipynb
@@ -1,16 +1,54 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# **Day 3**\n",
+    "- ## Functions\n",
+    "     - ### Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assalam-o-Alikum\n",
+      "Function has been called\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greetings():\n",
+    "    print('Assalam-o-Alikum')\n",
+    "greetings()\n",
+    "print('Function has been called')"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0rc2"
   },
   "orig_nbformat": 4
  },
