--- a/20 days strategy/day3.ipynb
+++ b/20 days strategy/day3.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -29,6 +29,160 @@
     "    print('Assalam-o-Alikum')\n",
     "greetings()\n",
     "print('Function has been called')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 "
+     ]
+    }
+   ],
+   "source": [
+    "def fib(n):\n",
+    "    a, b = 0,1\n",
+    "    while a < n+1:\n",
+    "        print(a, end= ' ')\n",
+    "        a, b = b , a+b\n",
+    "fib(999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tomy Bille Cow Perrot\n"
+     ]
+    }
+   ],
+   "source": [
+    "#while function declearation you can specify a default value to the argument\n",
+    "def pet(first = 'Dog', second = 'Cat', third = 'Cow', fourth = 'Perrot'):\n",
+    "    print(first, second, third , fourth )\n",
+    "pet('Tomy', 'Bille')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 6\n",
+    "def f(arg = i):\n",
+    "    print(arg)\n",
+    "i = 3\n",
+    "f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string = 'Muaaz'\n",
+    "print(string[0])\n",
+    "# string[0] = 'U' // This is not allowed in python because strings are immutable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 2]\n",
+      "[1, 2, 3]\n",
+      "[1, 2, 'B']\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def listed(a , L=[]):\n",
+    "    L.append(a)\n",
+    "    return L\n",
+    "print(listed(1))\n",
+    "print(listed(2))\n",
+    "print(listed(3))\n",
+    "L = []\n",
+    "L.append(1)\n",
+    "L.append(2)\n",
+    "L.append('B')\n",
+    "print(L)\n",
+    "print(listed(4))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Chellenges\n",
+    "     - #### Chellenge no 1\n",
+    "          Python program which takes a list as input and returns the median of the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the list after sorting [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def median(L):\n",
+    "    convertedList = convertToInt(L)\n",
+    "    sortedList= sort(convertedList)\n",
+    "    print('This is the list after sorting',sortedList)\n",
+    "    if len(sortedList) % 2 != 0:\n",
+    "        return sortedList[int(len(sortedList)/2)]\n",
+    "    else:\n",
+    "        return (sortedList[int(len(sortedList)/2)] + sortedList[int(len(sortedList)/2) +1])/2\n",
+    "def convertToInt(L):\n",
+    "    tempConverted = []\n",
+    "    for i in L:\n",
+    "        tempConverted.append(int(i))\n",
+    "    return tempConverted\n",
+    "def sort(L):\n",
+    "    for i in range(len(L)):\n",
+    "        for j in range(i+1, len(L)):\n",
+    "            if L[i]> L[j]:\n",
+    "                temp = L[i]\n",
+    "                L[i], L[j] = L[j], temp\n",
+    "    return L\n",
+    "print(median([17, 16, 15 , 14, 13, 12, 1, 2, 3, 4, 5,6 ,7, 8, 9, 10 , 11]))"
    ]
   }
  ],
@@ -48,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc2"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
