--- a/20 days strategy/day3.ipynb
+++ b/20 days strategy/day3.ipynb
@@ -107,6 +107,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'muaaz'\n",
+    "print(name[len(name)-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "greetings\n",
+    "greetings()\n",
+    "def greetings():\n",
+    "    print('hi')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -163,12 +201,11 @@
    ],
    "source": [
     "def median(L):\n",
-    "    convertedList = convertToInt(L)\n",
-    "    sortedList= sort(convertedList)\n",
-    "    print('This is the list after sorting',sortedList)\n",
-    "    if len(sortedList) % 2 != 0:\n",
+    "    convertedList = convertToInt(L) #converting list(which is string for now) to integer list\n",
+    "    sortedList= sort(convertedList) #sending the conveted to integer list to be sorted\n",
+    "    if len(sortedList) % 2 != 0: #if the list is of odd length then simply return the middle most element as median\n",
     "        return sortedList[int(len(sortedList)/2)]\n",
-    "    else:\n",
+    "    else: #but if length of list is even then return the average of teh middle most pair of elements\n",
     "        return (sortedList[int(len(sortedList)/2)] + sortedList[int(len(sortedList)/2) +1])/2\n",
     "def convertToInt(L):\n",
     "    tempConverted = []\n",
@@ -183,6 +220,149 @@
     "                L[i], L[j] = L[j], temp\n",
     "    return L\n",
     "print(median([17, 16, 15 , 14, 13, 12, 1, 2, 3, 4, 5,6 ,7, 8, 9, 10 , 11]))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- #### Chellenge no 2\n",
+    "     Python program that takes a sentense as input and returns it reversed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zaaum si eman yM\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reversedSentense(L):\n",
+    "     R = ''\n",
+    "     for i in reversed(L):\n",
+    "        R += i\n",
+    "     return R\n",
+    "print(reversedSentense('My name is muaaz'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- #### Chellenge no 3\n",
+    "     Python Program which takes an integer list as input and returns the difference between the smallest and largest number in the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convertToInt(L):\n",
+    "    tempConverted = []\n",
+    "    for i in L:\n",
+    "        tempConverted.append(int(i))\n",
+    "    return tempConverted\n",
+    "def diffFinder(L):\n",
+    "    L = convertToInt(L)\n",
+    "    largest , smallest = L[0] , L[0]\n",
+    "    for i in range(len(L)):\n",
+    "          if L[i] > largest:\n",
+    "            largest = L[i]\n",
+    "          elif L[i] < smallest:\n",
+    "              smallest = L[i]\n",
+    "    return largest - smallest\n",
+    "\n",
+    "print(diffFinder([22,2, 3,4,5,6,7,8,9,7,20]))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- #### Chellenge no 4\n",
+    "     python program that takes a list of words as input and returns only words ending with e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Stree', 'Alee', 'prime']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def eWordsFinder(L = []):\n",
+    "    wordsHavingE = []\n",
+    "    for i in range(len(L)):\n",
+    "        if L[i][len(L[i])-1] == 'e':\n",
+    "            wordsHavingE.append(L[i])\n",
+    "    return wordsHavingE\n",
+    "print(eWordsFinder(['Stree','muaaz', 'zain', 'Sultan','Alee', 'prime']))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- #### Chellenge no 5\n",
+    "     Python program which sorts a list of numbers in descending order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 8, 7, 6, 5, 4, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sortDescending(L):\n",
+    "    L = intConverter(L)\n",
+    "    for i in range(len(L)):\n",
+    "        for j in range(i+1, len(L)):\n",
+    "            if L[i] < L[j]:\n",
+    "                temp = L[i]\n",
+    "                L[i], L[j] = L[j], temp\n",
+    "    return L\n",
+    "def intConverter(L):\n",
+    "    temp = []\n",
+    "    for i in L:\n",
+    "        temp.append(int(i))\n",
+    "    return temp\n",
+    "print(sortDescending([2, 3, 4, 5, 9, 8, 7, 6]))\n"
    ]
   }
  ],
@@ -202,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc2"
   },
   "orig_nbformat": 4
  },
